<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_horizontal|center_vertical"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:scaleType="fitXY"
            android:src="@drawable/rich_logo">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usernamelabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/userid"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/red1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="gone" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="0"
                android:visibility="gone"
                app:srcCompat="@android:drawable/ic_menu_search"
                tools:visibility="gone" />

            <EditText
                android:id="@+id/your_user_id_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/search_hint"
                android:inputType="number" />

            <Button
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10sp"
                android:background="@drawable/search_button_shape"
                android:backgroundTint="@color/red2"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="search_button_clicked"
                android:scrollbarSize="0dp"
                android:text="@string/search"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#DAB9B9"
                android:textStyle="normal"
                app:icon="@android:drawable/ic_menu_search"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/still_not_signed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:padding="5sp"
            android:text="@string/still_not_signed"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="gone">

            <TextView
                android:id="@+id/passwordlabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/red1"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="textPassword" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/login_button"
            android:clickable="true"
            android:padding="10dp"
            android:text="hello"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="gone" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:text=" sign in with google"
            android:onClick="sign_in_with_google_clicked"/>


    </LinearLayout>

    <TextView
        android:id="@+id/bottom_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/bottom_title"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>